--- a/index.html
+++ b/index.html
@@ -4,5 +4,5 @@
 
 <ul>
   <li> <a href="https://scholar.google.com/citations?user=DA8ABJUAAAAJ&hl=en">Google Scholar</a> </li>
-  <li> <a href="https://www.zhihu.com/people/streitwagen">Zhihu</a> </li>
+  <!-- <li> <a href="https://www.zhihu.com/people/streitwagen">Zhihu</a> </li> -->
 </ul>
